welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value nbpas
                       nbPas=nbpas+1}
                             ^