welcome.lessons.welcome.variables.Variables.scala.code
var nbPas: Int = 0
while(!estSurBiscuit()){avance()
                       nbPas=nbpas+1}
recule(nbPas)